# vscode-python-test-adapter-socket

./: README.md  pyproject.toml
tests/: test_always_fail.py
